--- a/.github/workflows/99acres-scrape.yml
+++ b/.github/workflows/99acres-scrape.yml
@@ -29,6 +29,6 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add output.json
+          git add output-99acres.json
           git commit -m "Update output.json [skip ci]" || echo "No changes to commit"
           git push
