--- a/.github/workflows/99acres-scrape.yml
+++ b/.github/workflows/99acres-scrape.yml
@@ -3,7 +3,7 @@ name: 99 Acres Scrape
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 0 * * *' # Runs every day at midnight
+    - cron: '0 */8 * * *'
 
 jobs:
   scrape:
